# clue-scorecard

./: LICENSE  Makefile  Makefile.in  a.out  clue_scorecard  cluesc  cluesc.c  configure  configure.ac  main.c  plan.md  tmpdb_cluesc
autoconf/: Makefile.am
autoconf/autom4te.cache/: traces.0
autom4te.cache/: output.0  requests  traces.1
